<resources>
    <string name="app_name">LLAMA CLINIC</string>
    <string-array name="tipos_documento">
        <item>DNI</item>
        <item>Pasaporte</item>
        <item>Carnet de Extranjería</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="title_notificacion">Notificaciónes</string>
    <string name="title_historial">Historial</string>
    <string name="title_profile">Perfil</string>
    <string name="bottom_nav_list">Lista</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_pacientes">Pacientes</string>
    <string name="menu_odondologo">Odondologo</string>
    <string name="menu_tratamientos">Tratamientos</string>
    <string name="menu_notificaciones">Notificaciónes</string>
    <string name="menu_citas">Citas Programadas</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>