<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_citas"
        android:name="com.example.pryandroidclinica.CitaProgramadaFragment"
        android:label="@string/menu_citas"
        tools:layout="@layout/citas_programadas_layout" />



    <fragment
            android:id="@+id/nav_manage_appointments"
        android:name="com.example.pryandroidclinica.NotificacionFragment"
        android:label="@string/menu_notificaciones"
        tools:layout="@layout/fragment_notificacion" />
    <fragment
        android:id="@+id/nav_manage_patients"
        android:name="com.example.pryandroidclinica.PacientesFragment"
        android:label="@string/menu_pacientes"
        tools:layout="@layout/paciente" />

    <fragment
        android:id="@+id/nav_manage_dentists"
        android:name="com.example.pryandroidclinica.OdontologosFragment"
        android:label="@string/menu_odondologo"
        tools:layout="@layout/odontologo" />
    <fragment
        android:id="@+id/nav_manage_treatments"
        android:name="com.example.pryandroidclinica.TratamientosFragment"
        android:label="@string/menu_tratamientos"
        tools:layout="@layout/tratamiento" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pryandroidclinica.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.pryandroidclinica.ui.slideshow.SlideshowFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_profile" />
</navigation>
