<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/page_home">

    <fragment
        android:id="@+id/page_home"
        android:name="com.example.pryandroidclinica.fragments.PageFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home">
        <argument
            android:name="ARG_ICON"
            android:defaultValue="@drawable/home"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/notificacion_layout"
        android:name="com.example.pryandroidclinica.fragments.PageFragment"
        android:label="@string/title_notificacion"
        tools:layout="@layout/notificacion">
        <argument
            android:name="ARG_ICON"
            android:defaultValue="@drawable/notificacion"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/historial_layout"
        android:name="com.example.pryandroidclinica.fragments.PageFragment"
        android:label="@string/title_historial"
        tools:layout="@layout/historial">
        <argument
            android:name="ARG_ICON"
            android:defaultValue="@drawable/historia"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/fragment_profile"
        android:name="com.example.pryandroidclinica.fragments.PageFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="ARG_ICON"
            android:defaultValue="@drawable/usuario"
            app:argType="reference" />
    </fragment>

</navigation>